# Photomini

./: .gitignore  ENGINEERING.md  README.md  SPEC.md  index.html  package-lock.json  package.json  项目复盘.md
.github/workflows/: build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: create_icons.py  design_icon.py  icon.icns
src-tauri/src/: lib.rs  main.rs
