[package]
name = "photomini"
version = "1.0.0"
description = "极简图片压缩与格式转换工具"
authors = ["Photomini Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "photomini_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
webp = "0.3"
